AC_INIT(topmon,0.1)
${FFLAGS=""}
dnl AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE

dnl LF_CONFIGURE_XXX includes AC_PROG_XXX and more

dnl LF_CANONICAL_HOST
dnl AC_PROG_CC
dnl LF_CONFIGURE_CC
dnl AC_PROG_CXX
dnl LF_CONFIGURE_CXX
AC_PROG_F77(mpif90)
dnl AC_PROG_FC
dnl LF_CONFIGURE_FORTRAN
dnl AC_PROG_RANLIB
dnl LF_HOST_TYPE
dnl LF_SET_WARNINGS

dnl LF_PROG_F77_PREFER_F2C_COMPATIBILITY
dnl LF_PROG_F77_PREFER_NATIVE_VERSION
dnl LF_PROG_F77
dnl AC_CONFIG_SUBDIRS(MANUAL TEST_SUITE MPI_SCRIPTS MPI_EXTRA)
dnl AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile ])
AC_OUTPUT
